DT-2036  Fix stretched images on WM Explorer

--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -223,6 +223,10 @@
         height: 0;
         padding-bottom: 100%;
         position: relative;
+
+        .image {
+            flex-shrink: 0;
+        }
     }
 
     // Image Link
